--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 "plugins": "plugins" },
     
 "scripts": {
-"start": "node index.js",
+"start": "node --no-warnings index.js",
 "test": "node test.js",
 "test2": "nodemon index.js" },
     
