--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "hispamemes": "^1.0.7",
   "hxz-api": "^1.0.1",
   "jsdom": "^19.0.0",
+  "jimp": "^0.22.7"
   "link-preview-js": "^3.0.0",
   "lodash": "^4.17.21",
   "lowdb": "^3.0.0",
@@ -69,7 +70,6 @@
   "qrcode-terminal": "^0.12.0",
   "readline": "^1.3.0",
   "similarity": "^1.2.1",
-  "sharp": "^0.32.0",
   "socket.io": "^4.4.1",
   "syntax-error": "^1.4.0",
   "nsfwjs": "^2.4.2",
