--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   "hispamemes": "^1.0.7",
   "hxz-api": "^1.0.1",
   "jsdom": "^19.0.0",
-  "jimp": "^0.22.7"
+  "jimp": "^0.22.7",
   "link-preview-js": "^3.0.0",
   "lodash": "^4.17.21",
   "lowdb": "^3.0.0",
