--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 "url": "https://github.com/GataNina-Li/GataBotLite-MD/issues" },
 "license": "GPL-3.0-or-later",
 "dependencies": {
-  "@adiwajshing/baileys": "npm:@ferdiz-afk/baileys",
+  "@adiwajshing/baileys": "npm:baileys@^6.0.8",
   "@bochilteam/scraper": "^3.0.0",
   "@vitalets/google-translate-api": "^8.0.0",
   "@shineiichijo/marika": "^2.0.6",
@@ -52,7 +52,7 @@
   "hispamemes": "^1.0.7",
   "hxz-api": "^1.0.1",
   "jsdom": "^19.0.0",
-  "jimp": "^0.22.7",
+  "jimp": "^0.16.1",
   "link-preview-js": "^3.0.0",
   "lodash": "^4.17.21",
   "lowdb": "^3.0.0",
