--- a/package.json
+++ b/package.json
@@ -28,18 +28,18 @@
 "license": "GPL-3.0-or-later",
 "dependencies": {
   "@adiwajshing/baileys": "npm:baileys@^6.0.9",
-  "@bochilteam/scraper": "^3.0.0",
+  "@bochilteam/scraper": "^4.0.22-alpha.0",
   "@vitalets/google-translate-api": "^8.0.0",
   "@shineiichijo/marika": "^2.0.6",
   "acrcloud": "^1.4.0",
   "api-dylux": "^1.2.2",
   "awesome-phonenumber": "^2.68.0",
-  "axios": "^0.24.0",
+  "axios": "^1.3.4",
   "cfonts": "^2.10.0",
   "chalk": "^5.0.0",
   "cheerio": "^1.0.0-rc.10",
   "colors": "1.4.0",
-  "emoji-api": "^1.0.2",
+  "emoji-api": "^3.0.1",
   "express": "^4.17.3",
   "file-type": "^17.1.1",
   "fluent-ffmpeg": "^2.1.2",
@@ -83,7 +83,7 @@
   "translate-google-api": "^1.0.4",
   "url-regex-safe": "^3.0.0",
   "wa-sticker-formatter": "^4.3.2",
-  "yargs": "^17.3.1",
+  "yargs": "^17.7.1", 
   "yt-search": "^2.10.4",
   "ytdl-core": "^4.11.3"
 }}
