--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "@bochilteam/scraper": "^4.0.22-alpha.0",
   "@vitalets/google-translate-api": "^8.0.0",
   "@shineiichijo/marika": "^2.0.6",
+  "@xct007/frieren-scraper": "^0.0.2",
   "acrcloud": "^1.4.0",
   "api-dylux": "^1.2.2",
   "awesome-phonenumber": "^2.68.0",
